tests/negative/test-fail-struct2.std
Fatal error: exception Dune__exe__Sast.SemanticError("type not registered:Test")
